<resources>
    <string name="app_name">coastalITapp</string>
    <string name="crew">crew</string>
    <string name="ships">Ships</string>
    <string name="rum" />
    <string name="_0">0</string>
    <string name="_0">0</string>
    <string name="speed">speed:1</string>
    <string name="speedcrew">speed:1</string>
    <string name="costcrew">£1000</string>
    <string name="costrum">£100</string>
    <string name="weightrum">w:10</string>
    <string name="buy">BUY</string>
    <string name="BUY">BUY</string>
    <string name="_1X">1X</string>
    <string name="_1_X" />
    <string name="_£0">_£0</string>
    <string name="£0">£0</string>
    <string name="TOTAL">TOTAL</string>
    <string name="TOTAL">TOTAL</string>
    <string name="totalweight">TOTALWEIGHT</string>
    <string name="RUM">RUM</string>
</resources>