<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="horizontal">

    <TextView
        android:id="@id/multiplier"

        android:text="@string/_1X"

        android:layout_width="100dp"
        android:layout_height="44dp"

        android:layout_marginStart="200dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@id/total"

        android:text="@string/£0"

        android:layout_width="100dp"
        android:layout_height="44dp"

        android:layout_marginStart="250dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:text="@string/BUY"

        android:layout_width="100dp"
        android:layout_height="44dp"


        app:layout_constraintStart_toStartOf="@id/buycrew"
        app:layout_constraintBottom_toTopOf="@id/buycrew"
        />

    <TextView
        android:text="@string/BUY"

        android:layout_width="100dp"
        android:layout_height="44dp"


        app:layout_constraintStart_toStartOf="@id/buyrum"
        app:layout_constraintBottom_toTopOf="@id/buyrum"
        />

    <TextView
        android:text="TOTAL"

        android:layout_width="100dp"
        android:layout_height="44dp"

        app:layout_constraintStart_toStartOf="@id/totalRum"
        app:layout_constraintBottom_toTopOf="@id/totalRum"
        />

    <TextView
        android:text="@string/totalweight"

        android:layout_width="100dp"
        android:layout_height="44dp"

        app:layout_constraintStart_toStartOf="@id/totalweightRum"
        app:layout_constraintBottom_toTopOf="@id/totalweightRum"
        />

    <TextView
        android:text="@string/TOTAL"

        android:layout_width="100dp"
        android:layout_height="44dp"

        app:layout_constraintStart_toStartOf="@id/totalCrew"
        app:layout_constraintBottom_toTopOf="@id/totalCrew"
        />

    <Button
        android:id="@+id/buycrew"
        android:text="@string/crew"

        android:layout_width="100dp"
        android:layout_height="44dp"

        android:layout_marginStart="44dp"
        android:layout_marginTop="140dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/buycrew"
        android:text="@string/crew"

        android:layout_width="100dp"
        android:layout_height="44dp"

        android:layout_marginStart="44dp"
        android:layout_marginTop="140dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@id/totalCrew"

        android:text="@string/_0"

        android:layout_width="100dp"
        android:layout_height="44dp"

        android:layout_marginStart="10dp"
        android:layout_marginTop="140dp"

        app:layout_constraintStart_toEndOf="@id/buycrew"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@id/costCrew"

        android:text="@string/costcrew"

        android:layout_width="100dp"
        android:layout_height="44dp"

        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"

        app:layout_constraintStart_toStartOf="@id/buycrew"
        app:layout_constraintBottom_toBottomOf="@id/buycrew" />



    <Button
        android:id="@+id/buyships"
        android:text="@string/ships"

        android:layout_width="100dp"
        android:layout_height="44dp"

        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/buycrew" />

    <TextView
        android:id="@id/totalShips"

        android:text="@string/_0"

        android:layout_width="100dp"
        android:layout_height="44dp"

        android:layout_marginStart="10dp"
        android:layout_marginTop="44dp"

        app:layout_constraintStart_toEndOf="@id/buycrew"
        app:layout_constraintTop_toTopOf="@id/totalCrew" />

    <Button
        android:id="@+id/buyrum"
        android:text="@string/RUM"

        android:layout_width="100dp"
        android:layout_height="44dp"

        android:layout_marginStart="100dp"
        android:layout_marginTop="0dp"

        android:layout_marginEnd="10dp"

        app:layout_constraintStart_toStartOf="@id/totalCrew"
        app:layout_constraintTop_toTopOf="@id/totalCrew" />

    <TextView
        android:id="@id/totalRum"

        android:text="@string/_0"

        android:layout_width="100dp"
        android:layout_height="60dp"

        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"

        app:layout_constraintStart_toEndOf="@id/buyrum"
        app:layout_constraintTop_toTopOf="@id/buyrum" />

    <TextView
        android:text="@string/costrum"

        android:layout_width="100dp"
        android:layout_height="60dp"

        android:layout_marginStart="60dp"
        android:layout_marginTop="0dp"

        app:layout_constraintStart_toStartOf="@id/buyrum"
        app:layout_constraintBottom_toBottomOf="@id/buyrum" />

    <TextView
        android:text="@string/weightrum"

        android:layout_width="100dp"
        android:layout_height="60dp"

        android:layout_marginStart="10dp"
        android:layout_marginBottom="0dp"

        app:layout_constraintStart_toStartOf="@id/buyrum"
        app:layout_constraintBottom_toBottomOf="@id/buyrum" />

    <TextView
        android:id="@id/totalweightRum"

        android:text="@string/_0"

        android:layout_width="100dp"
        android:layout_height="60dp"

        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"

        app:layout_constraintStart_toEndOf="@id/totalRum"
        app:layout_constraintTop_toTopOf="@id/totalRum" />
</>